# CD-CI-Pipe-Machine-Learning-for-Credit-Prediction-Phase-3

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DIGEST.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml
archive/v1_initial/: README.md  config.py  data_prep.py  evaluation.py  features.py  models.py  requirements.txt  run_pipeline.py  scorecard.py  shap_explain.py
archive/v2_refactor/: DIGEST.md  README.md  requirements.txt
archive/v2_refactor/pipelines/: run_pipeline.py
archive/v2_refactor/src/: config.py  paths.py
archive/v2_refactor/src/data/: ingest.py  preprocess.py  split.py
archive/v2_refactor/src/features/: features.py
docker/: training.Dockerfile
docs/: DIGEST.md  LEARNING_PLAN.md  PRODUCTION_BUILD_PLAN.md
docs/architecture/: Credit_Pipeline_Production_Architecture.docx
pipelines/: run_pipeline.py  test_ingest.py
scripts/: docker-build.ps1  docker-run.ps1  docker-smoke.ps1
src/: config.py  paths.py  settings.py
src/data/: ingest.py  preprocess  preprocess.py  split.py
src/features/: features.py
src/models/: compare_models.py  evaluate.py  train.py  train_logistical.py  train_rf.py  train_scorecard.py
tests/: test_config.py  test_pipeline_smoke.py  test_settings.py
